--- a/src/pages/shared/Header.css
+++ b/src/pages/shared/Header.css
@@ -1,4 +1,5 @@
-.navbar{
-    background-color: #070A52;
-
+.active{
+    text-decoration: underline;
+    color:white;
+    background-color: red;
 }
