--- a/src/pages/shared/Footer/Footer.css
+++ b/src/pages/shared/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer{
     min-height: 150px;
-    background-color: #070A52;
-    color:white;
+    background-color: #e4eaec;
+    color:black;
     padding-bottom: 20px;
     margin-top: 20px;
 
